[gd_scene load_steps=4 format=2]

[ext_resource path="res://levels/Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui/Instructions.gd" type="Script" id=2]
[ext_resource path="res://fonts/DefaultFont.tres" type="DynamicFont" id=3]

[node name="Node" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="BackButton" parent="GUI" index="2"]
visible = true

[node name="Instruction" parent="GUI" index="6"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -240.0
margin_top = -335.0
margin_right = 240.0
margin_bottom = -93.0

[node name="NextInstruction" type="Button" parent="GUI" index="9"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 120.0
margin_top = 320.0
margin_right = 234.0
margin_bottom = 380.0
rect_min_size = Vector2( 100, 60 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.054902, 1, 0, 1 )
text = "Read More"

[node name="Arrows" parent="GUI" index="10"]
visible = true
[connection signal="pressed" from="GUI/NextInstruction" to="." method="_on_NextInstruction_pressed"]
